# wrangle

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  ExportOptions.plist  README.md  SECURITY.md  build-plan.md  skills-lock.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/: file-tree-ui-tightening-PLAN.md
.planning/research/: file-tree-ui-research.md
WrangleTests/: EditorDocumentTests.swift  FileTypeTests.swift  LicenseResidueCleanupTests.swift  LinkRouterTests.swift  MarkdownParserTests.swift  TokenCounterTests.swift  WhatsNewManagerTests.swift
corral/: ContentView.swift  Item.swift  corralApp.swift
corral.xcodeproj/: project.pbxproj
corral/App/: AppState.swift
corral/Editor/: EditorContext.swift  EditorTextView.swift  EditorToolbar.swift  JsonSyntaxHighlighter.swift  JsonToolbar.swift  MarkdownParser.swift  MarkdownTextView.swift  TitleBarTabStrip.swift
docs/: architecture.md  audit-report.md  coding-patterns.md  launch-strategy.md  pre-launch-todo.md  release-checklist.md  token-counting-research.md
engine/: Cargo.toml
engine/src/: db.rs  main.rs  protocol.rs  snapshot.rs  timeline.rs
scripts/: build-engine.sh  build-release.sh  bump-version.sh  create-dmg.sh  generate-og-image.py  polish-all-screenshots.sh  polish-screenshot.py  polish-video.sh  preflight-release.sh  reset-license.sh  screenshot-tool.swift
wrangle/: ContentView.swift  Info.plist  wrangleApp.swift
wrangle.xcodeproj/: project.pbxproj
(+272 files in other folders)
